<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:paddingStart="30dp"
                                             android:paddingEnd="30dp">

    <EditText
            android:id="@+id/sign_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sign_email_hint"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/sign_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sign_password_hint"
            android:inputType="textPassword"
            android:lines="1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_email"/>

    <Button
            android:id="@+id/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_in_button"
            android:text="@string/sign_up_button_title"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sign_button_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_password"/>

    <TextView
            android:id="@+id/else_suggest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/sign_in_else_suggest_label"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/sign_in_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <Button
            android:id="@+id/sign_in_facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/sign_in_facebook_button"
            android:drawableStart="@drawable/ic_facebook"
            android:text="@string/sign_in_facebook_button_title"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sign_button_text_size"
            app:layout_constraintBottom_toTopOf="@id/sign_in_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <Button
            android:id="@+id/sign_in_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/sign_in_google_plus_button"
            android:drawableStart="@drawable/ic_google_plus"
            android:text="@string/sign_in_google_button_title"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sign_button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>